# minipilot-sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/: packages.config
Assets/Prefabs/: PropMotor.prefab  QuadX.prefab
Assets/Scenes/: Quadcopter.unity
Assets/Scripts/: Bridge.cs  BridgeServer.cs
Assets/Scripts/Actuator/: PropMotor.cs
Assets/Scripts/Protobuf/: Bridge.cs  ReadAcc.cs  ReadGyro.cs  Types.cs  WriteMotor.cs
Assets/Scripts/Sensor/: Accelerometer.cs  Barometer.cs  Gyroscope.cs  Magnetometer.cs
Assets/Scripts/Util/: FirstOrderResponse.cs  ProtobufUtils.cs
ProjectSettings/: ProjectSettings.asset
lib/: minipilot  minipilot-proto
mp-unix/: CMakeLists.txt
mp-unix/src/: main.cpp
mp-unix/src/drivers/actuators/: motor_pb.hpp
mp-unix/src/drivers/bridge/: bridge.cpp  stdio_dev.hpp
mp-unix/src/drivers/sensors/: accelerometer_pb.cpp  accelerometer_pb.hpp  gyroscope_pb.cpp
protobuf/: CMakeLists.txt  Makefile
protobuf/src/: bridge.proto  common_types.proto  get_state.proto  mp  read_acc.proto  read_gyro.proto  types_sim.proto  write_motor.proto
protobuf/src/mpsim/: write_motor.proto
src/: main.cpp
src/drivers/: accelerometer.cpp  accelerometer_pb.cpp  accelerometer_pb.hpp  gyroscope_pb.cpp  gyroscope_pb.hpp  motor_pb.hpp  socket_client.cpp  socket_client.hpp  udp_dev.cpp  udp_dev.hpp
src/drivers/actuators/: accelerometer_pb.cpp  accelerometer_pb.hpp  gyroscope_pb.cpp  gyroscope_pb.hpp  motor_pb.cpp  motor_pb.hpp
src/drivers/bridge/: bridge.cpp  bridge.hpp  stdio_dev.hpp  udp_dev.cpp  udp_dev.hpp
src/drivers/sensors/: accelerometer_pb.cpp  accelerometer_pb.hpp  gyroscope_pb.cpp  gyroscope_pb.hpp
src/drivers/state/: state_pb.cpp  state_pb.hpp
src/unity/: constants.hpp  state_pb.cpp  state_pb.hpp
src/unity/vehicles/: quad_x.hpp
src/vehicles/unity/: constants.hpp  quad_x.hpp
unity/: .gitignore
unity/Assets/: Protobuf
unity/Assets/Prefabs/: PropMotor.prefab
unity/Assets/Scripts/: BridgeServer.cs  Protobuf
unity/Assets/Scripts/Util/: Noise.cs  ProtobufUtils.cs
unity/Assets/Shaders/: Ground.mat
